# Xsol-TraderAI

./: CMakeLists.txt  README.md
src/: main.cpp
src/include/: solana_framework.h
src/models/: ai_driven_trading_model.h  multi_agent_system_model.cpp  multi_agent_system_model.h  trading_strategy_execution_model.cpp  trading_strategy_execution_model.h  wallet_cluster_analysis_model.cpp  wallet_cluster_analysis_model.h
src/solana/: solana_framework.cpp  solana_framework.h
src/utils/: README.md  amr.cpp  amr.h  euler.cpp  euler.h  fft.cpp  fft.h  fractional_laplacian.cpp  graph_theory.h  hyperbolic_geometry.cpp  hyperbolic_geometry.h  llm_inference.cpp  llm_inference.h  stochastic_calculus.cpp  stochastic_calculus.h  wallet_cluster_analysis.cpp  wallet_cluster_analysis.h
